# project-repository-skeleton

./: LICENSE  README.md  cookiecutter.sh
templates/: Makefile  requirements.txt
templates/project/: cookiecutter.json  (+1 more)
templates/project/{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
templates/project/{{cookiecutter.repo_name}}/.github/workflows/: testing-ci.yml
templates/project/{{cookiecutter.repo_name}}/config/: experiment.yaml  logging.yaml
templates/project/{{cookiecutter.repo_name}}/config/credentials/: aws.yaml  wandb.yaml
templates/project/{{cookiecutter.repo_name}}/config/models/: xbgoost.yaml
templates/project/{{cookiecutter.repo_name}}/config/training/: training.yaml
templates/project/{{cookiecutter.repo_name}}/docs/: requirements.txt
templates/project/{{cookiecutter.repo_name}}/docs/source/: conf.py  index.rst
templates/project/{{cookiecutter.repo_name}}/environment/: environment_v3_9.yml
templates/project/{{cookiecutter.repo_name}}/environment/dependencies/: requirements.txt  requirements_docs.txt  requirements_test.txt
templates/project/{{cookiecutter.repo_name}}/examples/: experiment_logging.py
templates/project/{{cookiecutter.repo_name}}/tests/: test_module.py
templates/project/{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/: __init__.py  version.py
templates/project/{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/core/: utils.py
templates/project/{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/infra/: trace.py
(+1 files in other folders)
