[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile                 = "black"
multi_line_output       = 3
include_trailing_comma  = true

[tool.pylint.main]
output-format           = "colorized"

[tool.pylint.messages_control]
# https://github.com/PyCQA/pylint/issues/3181
# https://pylint.pycqa.org/en/latest/messages/messages_list.html
max-line-length         = 120
good-names              = "f,fp,df,x,y,i,j,k"
#disable                = "R,C,W1203,E1101"
disable  = [
    "no-member",                        # E1101
    "logging-fstring-interpolation",    # W1203
    "missing-module-docstring",         # C0114
    "exec-used"                         # W0122
]

[tool.black]
line-length             = 120
include                 = '\.pyi?$'

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"
